--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,11 +16,18 @@
   padding: 0;
 }
 
+html, body {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
+  width: 100%;
+}
+
 body {
   background-color: var(--color-white);
   color: var(--color-text-main);
   font-family: 'Inter', sans-serif;
   overflow-x: hidden;
+  position: relative;
 }
 
 a {
